@@ -1,3 +1,9 @@
+2006-12-19  Kazu Hirata  <kazu@codesourcery.com>
+
+	* elf32-m68k.c (elf32_m68k_object_p,
+	elf32_m68k_print_private_bfd_data): Use EF_M68K_ARCH_MASK to
+	extract architecture mask.
+
 2006-12-19  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* elf.c (assign_file_positions_for_load_sections): Adjust p_vaddr
